<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dream_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DreamListFragment">
</androidx.recyclerview.widget.RecyclerView>